# work-with-api

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
examples/: github_repos.html  hn_active_comments.html  python_repos.html
exercises/: ex1_python_repos.py  ex2_python_repos_visual.py  ex3_other_languages.py  ex4_hn_article.py  ex5_hn_active_discussions.py  ex6_test_python_repos.py
