[tool.poetry]
name = "work-with-api"
version = "0.9"
description = "A collection of exercises to practice in visualizing API requests from GitHub and HackerNews."
classifiers = [
    "Topic :: Scientific/Engineering :: Visualization"
]
authors = ["Denis Bolshakov <dreu007@gmail.com>"]
repository = "https://github.com/DREU007/work-with-api"
readme = "README.md"
packages = [{include = "exercises"}]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.14.1"
requests = "^2.29.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
